<resources>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit this entry</string>
    <string name="action_delete">Delete this entry</string>
    <string name="alertdialog_delete_entry">Delete this entry?</string>
    <string name="alertdialog_delete_contact_body">Are you sure? This cannot be undone !</string>
    <string name="settings_ui_theme_clear">Clear</string>
    <string name="settings_ui_theme_dark">Dark</string>
    <string name="settings_ui_theme_black">Black</string>
    <string name="settings_ui_theme_battery_saver">Battery saver</string>
    <string name="settings_ui_system">System</string>
    <string name="ui_language_title">Language</string>
    <string name="ui_theme_title">Theme</string>
    <string name="settings_other_feedback_title">Feedback</string>
    <string name="settings_other_feedback_description">Feel free to send an e-mail!</string>
    <string name="app_description">oRing is an app that helps you managing your thermal contraception</string>
    <string name="license_app_title">This app uses Apache 2 Licence.</string>
    <string name="license_app_source">You can see the app\'s source code here :\n https://github.com/lubenard/oRing_Reminder</string>
    <string name="about_additional_software_licenses">About and Licenses</string>
    <string name="settings_other_see_licenses_title">See about and licences</string>
    <string name="notif_channel_name">Send an erasable notification</string>
    <string name="notif_normal_channel_desc">This channel is used to send notifications when you can remove your protection</string>
    <string name="minute_with_M_uppercase">&#160;Minutes</string>
    <string name="error_edit_entry_date">Error: end time is not correct, please check it</string>
    <string name="not_set_yet">Not set yet</string>
    <string name="session_is_running">Session is running</string>
    <string name="_message_able_to_get_it_off">You should be able to get it off at: \n</string>
    <string name="session_finished">Session is finished!</string>
    <string name="error_bad_id_entry_details">Error: Bad id: </string>
    <string name="notif_get_it_off_title">Reminder:</string>
    <string name="notif_get_it_off_body">You can take your protection off!</string>
    <string name="licenses">Licenses</string>
    <string name="set_auto_date_and_time">Auto fill date and time</string>
    <string name="to">To:</string>
    <string name="from">Since:</string>
    <string name="you_weared_your_protection_from">You wore your protection since:</string>
    <string name="that_make_about">That makes about:</string>
    <string name="worn_for">Worn for:</string>
    <string name="alertdialog_dangerous_wearing_time">Are you sure?</string>
    <string name="alertdialog_dangerous_wearing_body">Not wearing your protection enough can make you fertile again. Wearing it too often is not good either. If in doubt, have a spermogram and go see your doctor.</string>
    <string name="wering_time">Wearing time</string>
    <string name="settings_send_notif_when_done_wearing">Send a notification when you can take off your protection</string>
    <string name="settings_around">Around,&#160;</string>
    <string name="settings_actually_value">Current, %s</string>
    <string name="action_validate">Save this entry</string>
    <string name="alertdialog_multiple_running_session_title">Warning: Multiple running sessions detected!</string>
    <string name="settings_prevent_me_when_started_session">Prevent me when a session has already started</string>
    <string name="toast_session_ended">Session with the following id has been set as finished:&#160;</string>
    <string name="debug_menu_title">Debug menu</string>
    <string name="debug_menu_description">If you need to debug this app, this is the right place!</string>
    <string name="custom_backup_title_alertdialog">What do you plan to backup?</string>
    <string name="custom_backup_alertdialog_save_datas">Save my data</string>
    <string name="custom_backup_alertdialog_save_settings">Save my settings</string>
    <string name="toast_error_custom_path_backup_restore_fail">Failed to open a Intent. Save will be done at default location.</string>
    <string name="toast_error_custom_path_backup_restore_android_too_old">Your android version is pretty old. Save will be done at default location.</string>
    <string name="custom_restore_title_alertdialog">Choose what do you want to restore</string>
    <string name="custom_restore_alertdialog_save_datas">Restore my data</string>
    <string name="custom_restore_alertdialog_save_settings">Restore my settings</string>
    <string name="settings_alertdialog_erase_title">Erase all your data</string>
    <string name="alertdialog_please_enter_digits_title">Please enter only digits</string>
    <string name="alertdialog_please_enter_digits_body">Could you please enter only digits? Thanks</string>
    <string name="datas_export_data_xml_title">Export your data in XML</string>
    <string name="datas_export_data_xml_summary">Export your data in XML format</string>
    <string name="datas_import_data_xml_title">Import your data in XML</string>
    <string name="datas_export_data_csv_title">Export your data in CSV</string>
    <string name="datas_erase_data_title">Erase all your data</string>
    <string name="datas_erase_datas_summary">This will delete all your data</string>
    <string name="cat_ui">UI</string>
    <string name="cat_my_protection">MY PROTECTION</string>
    <string name="cat_datas">DATA</string>
    <string name="cat_other">OTHER</string>
    <string name="datas_import_data_xml">Import your data in XML format</string>
    <string name="datas_export_data_csv">Export your data in CSV format</string>
    <string name="alertdialog_multiple_running_session_body">Multiple sessions running have been found! What do you want to do?</string>
    <string name="alertdialog_multiple_running_session_choice1">End them all!</string>
    <string name="alertdialog_multiple_running_session_choice2">Still insert my entry</string>
    <string name="license_XmlWriter_title">This app use parts of <b>Java-very-tiny-XmlWriter</b>.</string>
    <string name="license_androidPdfViewer_title">This app use parts of <b>AndroidPdfViewer</b>.</string>
    <string name="license_XmlWriter_source">"You can see the source code of this library here :\n https://github.com/menny/Java-very-tiny-XmlWriter"</string>
    <string name="license_androidPdfViewer_source">You can see the source code of this library here :  https://github.com/barteksc/AndroidPdfViewer</string>
    <string name="toast_success_restore_datas">Success to restore the data</string>
    <string name="toast_success_save_datas">Success to save the data</string>
    <string name="settings_alertdialog_erase_datas_body">Are you sure you want to delete all your data ? All losses are definitive. Once completed, the app will shut down.</string>
    <string name="notif_choice_do_it">Okay, i did it</string>
    <string name="notif_choice_dismiss">Dismiss</string>
    <string name="please_wait">Please wait…</string>
    <string name="toast_session_bad_id">"There was an error: we could not end session with id: "</string>
    <string name="in_about_entry_details">in about %dh%02dm</string>
    <string name="ordered_by_desc">The entries are now sorted from newer to older</string>
    <string name="not_ordered_by_desc">The entries are now sorted from older to newer</string>
    <string name="pause_beginning_to_small">The starting date of the pause is before the starting date of the entry. Please fix.</string>
    <string name="pause_ending_too_big">The ending date of the pause is after the ending date of the entry. Please fix.</string>
    <string name="pause_starting_too_big">The starting date of the pause is after the ending date of the entry. Please fix.</string>
    <string name="pause_ending_too_small">The ending date of the pause is before the starting date of the entry. Please fix.</string>
    <string name="already_running_pause">It seems there already is a running pause.</string>
    <string name="ui_action_on_plus_button_title">Action during click on (+) button in homepage</string>
    <string name="settings_ui_action_on_plus_button_default">(Default)\nPress -> quick running session \nLong press -> advanced session ui</string>
    <string name="settings_ui_action_on_plus_button_long_click">Press -> advanced session ui \nlong press -> quick running session</string>
    <string name="when_get_it_off_negative">(about -%dh%02dm ago)</string>
    <string name="removed_during">Removed during:</string>
    <string name="last_day_string_header">In last 24h, you wore it during:</string>
    <string name="create_new_entry">New entry</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="no_running_session">No running session</string>
    <string name="you_can_get_it_on_again">"You should get it on at: "</string>
    <string name="action_calculators">Calculators</string>
    <string name="calculators_title">Calculators</string>
    <string name="number_of_spermato_per_ml">Number of spermatozoa / ml:</string>
    <string name="progressive_mobility_in_percent">Progressive mobility (in %):</string>
    <string name="compute_if_i_am_fertile">Compute if I am contracepted</string>
    <string name="you_are_contracepted">You are contracepted! With a number of:&#160;</string>
    <string name="you_are_not_contracepted">You are NOT contracepted! With a number of:&#160;</string>
    <string name="spermo_per_ml">&#160;spermatozoa / ml</string>
    <string name="please_fill_required_infos">Please fill the required info.</string>
    <string name="bad_date_format">Bad date format. Please check it.</string>
    <string name="finish_session">Finish this session</string>
    <string name="get_it_on_before">Get it on before</string>
    <string name="not_enough_datas_to_compute_get_it_on">Not enough data to compute when you should wear it again</string>
    <string name="no_pause_session_is_not_running">You cannot create a running pause if the session is not running</string>
    <string name="settings_prevent_me_when_no_session_started_for_today">Prevent me if no session is running at given hour</string>
    <string name="myring_prevent_me_when_no_session_started_date_title">Choose the time I want to be notified</string>
    <string name="have_you_start_session_today_title">Have you created a session today?</string>
    <string name="have_you_start_session_today_body">No running sessions have been found.</string>
    <string name="settings_prevent_me_when_pause_too_long">Prevent me when a break is too long</string>
    <string name="prevent_me_after">Prevent me after</string>
    <string name="your_break_seems_longer_title">Your break seems longer than expected</string>
    <string name="your_break_seems_longer_body">Have you forgot to set it as ended?</string>
    <string name="the_calculation_is_as_follows">The calculation is as follows:</string>
    <string name="action_datas">Data</string>
	<string name="action_my_spermograms">My spermograms</string>
    <string name="action_sort_datas">Sort datas</string>
    <string name="action_search_datas">Search entry</string>
    <string name="example_hint_start_date" translatable="false">Ex: 2020–03–30</string>
    <string name="example_hint_end_date" translatable="false">Ex: 2020–03–30</string>
    <string name="example_hint_start_time" translatable="false">Ex: 10:04:20</string>
    <string name="example_hint_end_hour" translatable="false">Ex: 13:37:00</string>
    <string name="save_icon">Save icon</string>
    <string name="close_icon">close icon</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="clock_icon">Clock icon</string>
    <string name="start_break">Start break :</string>
    <string name="manual_edit_icon">Manual edit icon</string>
</resources>