<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lubenard.ft_hangouts.MainActivity">

    <item
        android:id="@+id/action_search_entry"
        android:title="@string/action_search_datas"
        android:icon="@drawable/outline_search_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reload_datas"
        android:title="@string/action_reload_datas"
        android:icon="@drawable/baseline_refresh_36"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort_entrys"
        android:icon="@drawable/baseline_sort_24"
        android:title="@string/action_sort_datas"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_my_spermogramms"
        android:title="@string/action_my_spermograms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calculators"
        android:title="@string/action_calculators"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_datas"
        android:title="@string/action_datas"
        app:showAsAction="never" />
</menu>