<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:background="@drawable/create_new_session_dialog_background"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/create_new_break_cancel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/outline_close_24"
                android:background="@null"
                android:contentDescription="@string/close_icon" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/manual_edit_pause"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/edit_48px"
                android:background="@null"
                android:contentDescription="@string/manual_edit_icon" />

            <ImageButton
                android:id="@+id/validate_pause"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/baseline_save_24"
                android:background="@null"
                android:contentDescription="@string/save_icon" />

        </LinearLayout>

        <TextView
            style="@style/base_text_all_wrap"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/start_break" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/new_entry_datepicker_from"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="3dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/outline_event_24"
                android:contentDescription="@string/calendar_icon" />

            <EditText
                android:id="@+id/edittext_beginning_pause"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:ems="6"
                android:digits="0123456789-"
                android:hint="@string/example_hint_start_date"
                android:autofillHints="" />

            <EditText
                android:id="@+id/new_entry_hour_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:layout_marginStart="10dp"
                android:ems="6"
                android:hint="@string/example_hint_start_time"
                android:digits="0123456789:"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/new_entry_timepicker_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:background="@null"
                android:layout_gravity="center"
                android:src="@drawable/outline_schedule_24"
                android:contentDescription="@string/clock_icon" />

        </LinearLayout>

        <Button
            android:id="@+id/prefill_beginning_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/basic_button"
            android:paddingHorizontal="8dp"
            android:textAllCaps="false"
            android:text="@string/set_auto_date_and_time" />

        <TextView
            style="@style/base_text_all_wrap"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/to" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/new_entry_datepicker_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_gravity="center"
                android:src="@drawable/outline_event_24"
                android:contentDescription="@string/calendar_icon" />

            <EditText
                android:id="@+id/edittext_finish_pause"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:ems="6"
                android:layout_weight="1"
                android:digits="0123456789-"
                android:hint="@string/example_hint_end_date"
                android:autofillHints="" />

            <EditText
                android:id="@+id/new_entry_hour_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:ems="6"
                android:layout_marginStart="10dp"
                android:digits="0123456789:"
                android:hint="@string/example_hint_end_hour"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/new_entry_timepicker_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_gravity="center"
                android:src="@drawable/outline_schedule_24"
                android:contentDescription="@string/clock_icon" />
        </LinearLayout>

        <Button
            android:id="@+id/prefill_finish_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/basic_button"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:text="@string/set_auto_date_and_time" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>