<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_weight="1">

        <TextView
            style="@style/base_text_all_wrap"
            android:textColor="@color/white"
            android:text="@string/from" />

        <TextView
            android:id="@+id/widget_date_from"
            android:textColor="@color/white"
            style="@style/base_text_all_wrap"
            android:text="date_from" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            style="@style/base_text_all_wrap"
            android:textColor="@color/white"
            android:text="@string/worn_for" />

        <TextView
            android:id="@+id/widget_worn_for"
            android:textColor="@color/white"
            style="@style/base_text_all_wrap"
            android:text="worn_for" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            style="@style/base_text_all_wrap"
            android:textColor="@color/white"
            android:text="@string/time_remaining" />

        <TextView
            android:id="@+id/widget_time_remaining"
            style="@style/base_text_all_wrap"
            android:textColor="@color/white"
            android:text="time_remaining" />
    </LinearLayout>
</LinearLayout>