<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_entry_toolbar"
        style="@style/basic_toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/baseline_arrow_back_white_36"
        app:menu="@menu/menu_add_entry"
        app:titleTextColor="@color/white"/>

    <TextView
        style="@style/base_text_all_wrap"
        android:textSize="30dp"
        android:text="@string/from" />

    <EditText
        android:id="@+id/new_entry_date_from"
        style="@style/base_text_all_wrap"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:inputType="datetime"
        android:hint="Ex: 2020-03-30 10:04:20"/>

    <Button
        android:id="@+id/new_entry_auto_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/set_auto_date_and_time" />

    <TextView
        style="@style/base_text_all_wrap"
        android:textSize="30dp"
        android:text="@string/to" />

    <EditText
        android:id="@+id/new_entry_date_to"
        style="@style/base_text_all_wrap"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="Ex: 2020-03-31 01:10:20"
        android:inputType="datetime" />

    <Button
        android:id="@+id/new_entry_auto_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/set_auto_date_and_time" />
</LinearLayout>