<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">

                <TextView
                    style="@style/base_text_all_wrap"
                    android:text="@string/from" />

                <TextView
                android:id="@+id/custom_view_date_weared_from"
                style="@style/base_text_all_wrap"
                tools:text="date_from" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

                <TextView
                    style="@style/base_text_all_wrap"
                    android:text="@string/to" />

                <TextView
                    android:id="@+id/custom_view_date_weared_to"
                    style="@style/base_text_all_wrap"
                    tools:text="date_from" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

                <TextView
                    style="@style/base_text_all_wrap"
                    android:text="@string/worn_for" />

                <TextView
                    android:id="@+id/custom_view_date_time_weared"
                    style="@style/base_text_all_wrap"
                    tools:text="weared_for" />
        </LinearLayout>
</LinearLayout>